.nais/prod-db-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sporhund-purring-db-policy
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.226.14/32
  podSelector:
    matchLabels:
      dbPolicyUser: purring
  policyTypes:
    - Egress
