.nais/sporhund-purring-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sporhund-purring-db-policy
  namespace: tbd
spec:
  podSelector:
    matchLabels:
      dbPolicyUser: purring
  policyTypes:
    - Egress
